<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".Activities.SignUpActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sign_up_welcome_image"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/fall_help"/>

        <TextView
            android:id="@+id/sign_up_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sign_up_welcome_image"/>

        <EditText
            android:id="@+id/sign_up_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:autofillHints="@string/username"
            android:textColorHint="@color/colorBlack"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/sign_up_welcome_text"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:drawableStart="@drawable/person_big"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/sign_up_first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:autofillHints="@string/first_name"
            android:textColorHint="@color/colorBlack"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/sign_up_username_edit_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:drawableStart="@drawable/person_big"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/sign_up_last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:autofillHints="@string/last_name"
            android:textColorHint="@color/colorBlack"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/sign_up_first_name_edit_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:drawableStart="@drawable/person_big"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/sign_up_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:autofillHints="@string/email"
            android:textColorHint="@color/colorBlack"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/sign_up_last_name_edit_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:drawableStart="@drawable/email_big"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/sign_up_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:autofillHints="@string/password"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/sign_up_email_edit_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:drawableStart="@drawable/key_big"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/sign_up_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:autofillHints="@string/phone"
            android:textColorHint="@color/colorBlack"
            android:inputType="phone"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/sign_up_password_edit_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:drawableStart="@drawable/phone_big"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/sign_up_server_ip_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_ip_hint"
            android:autofillHints="@string/server_ip"
            android:textColorHint="@color/colorBlack"
            android:inputType="phone"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/sign_up_phone_edit_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:drawableStart="@drawable/server"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/sign_up_enter_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_below="@id/sign_up_server_ip_edit_text"
            android:background="@drawable/rounded_button"
            android:text="@string/enter_location"/>

        <Button
            android:id="@+id/sign_up_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_below="@id/sign_up_enter_location_button"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_up"/>

    </RelativeLayout>

</ScrollView>