<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/log_in_welcome_image"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/fall_help"/>

    <TextView
        android:id="@+id/log_in_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/log_in_welcome_image"/>

    <EditText
        android:id="@+id/log_in_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:autofillHints="@string/email"
        android:textColorHint="@color/colorBlack"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/log_in_welcome_text"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/email_big"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/log_in_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:autofillHints="@string/password"
        android:textColorHint="@color/colorBlack"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/log_in_email_edit_text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/key_big"
        android:drawablePadding="20dp"/>

    <Button
        android:id="@+id/log_in_log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_button"
        android:text="@string/login"/>

</RelativeLayout>