<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/home_welcome_image"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/fall_help"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_welcome_image"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/home_live_streaming_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/live_stream"/>

        <Button
            android:id="@+id/home_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/profile"/>

        <Button
            android:id="@+id/home_fall_history_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/fall_history"/>

        <Button
            android:id="@+id/home_call_ambulance_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/call_ambulance"/>

        <Button
            android:id="@+id/home_logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/logout"/>

    </LinearLayout>

</RelativeLayout>