<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StartActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/start_welcome_image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/fall_help"/>

    <TextView
        android:id="@+id/start_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/start_welcome_image"/>

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/start_sign_up_button"
        android:background="@drawable/rounded_button"
        android:text="@string/login"/>

    <Button
        android:id="@+id/start_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_up"/>

</RelativeLayout>