<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:layout_margin="10dp"
        android:paddingStart="0dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/id"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_id_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/profile_id_button"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:background="@drawable/copy"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/email"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_email_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/username"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_username_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/profile_username_button"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_menu_edit"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/first_name"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_first_name_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/profile_first_name_button"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_menu_edit"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/last_name"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_last_name_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/profile_last_name_button"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_menu_edit"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/phone"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_phone_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/profile_phone_button"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_menu_edit"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/server_ip"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_server_ip_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/profile_server_ip_button"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_menu_edit"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/profile_enter_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/update_location"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>